[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/crafting/CraftDrying.gd" type="Script" id=1]
[ext_resource path="res://resources/GameTheme.tres" type="Theme" id=2]
[ext_resource path="res://resources/defaultFont.tres" type="Theme" id=3]
[ext_resource path="res://nodes/components/ScrollSelect.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/ResourcesTheme.tres" type="Theme" id=5]
[ext_resource path="res://sprites/Icons/256x256px/dryingrack.png" type="Texture" id=6]
[ext_resource path="res://shaders/flame.tres" type="Shader" id=7]
[ext_resource path="res://nodes/components/ItemSquareAmm.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/Icons/128x128px/arrow.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/on = 0.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.752941 )

[node name="CraftDrying" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="FoodLabel" type="Label" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
margin_top = 32.0
margin_bottom = 94.0
theme = ExtResource( 3 )
text = "Raw Meat"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 12
__meta__ = {
"_editor_description_": ""
}

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 256.0
margin_bottom = 720.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="FoodSelect" parent="HBoxContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = 268.0
margin_top = 204.0
margin_right = 452.0
margin_bottom = 516.0
slider = true

[node name="Control2" type="Control" parent="HBoxContainer"]
visible = false
margin_left = 352.0
margin_right = 417.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 464.0
margin_right = 592.0
margin_bottom = 720.0
texture = ExtResource( 11 )
stretch_mode = 4

[node name="OutputItem" parent="HBoxContainer" instance=ExtResource( 10 )]
unique_name_in_owner = true
margin_left = 604.0
margin_top = 288.0
margin_right = 748.0
margin_bottom = 432.0

[node name="Progress" type="Control" parent="HBoxContainer"]
margin_left = 760.0
margin_top = 199.0
margin_right = 1016.0
margin_bottom = 521.0
rect_min_size = Vector2( 256, 322 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Progress"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Rack" type="TextureProgress" parent="HBoxContainer/Progress/VBoxContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_right = 256.0
margin_bottom = 256.0
size_flags_horizontal = 4
size_flags_vertical = 4
value = 40.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 0, 0, 0, 1 )
tint_over = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0.486275, 0, 1 )

[node name="TimeRemaining" type="Label" parent="HBoxContainer/Progress/VBoxContainer"]
unique_name_in_owner = true
margin_top = 260.0
margin_right = 256.0
margin_bottom = 322.0
theme = ExtResource( 3 )
text = "0h:20m"
align = 1

[node name="Control3" type="Control" parent="HBoxContainer"]
margin_left = 1028.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Warning" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="Warning"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "64f"
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Build Drying Rack"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[connection signal="ammChanged" from="HBoxContainer/FoodSelect" to="." method="_on_FoodSelect_ammChanged"]
[connection signal="itemSelected" from="HBoxContainer/FoodSelect" to="." method="_on_FoodSelect_itemSelected"]
[connection signal="itemClicked" from="HBoxContainer/OutputItem" to="." method="_on_OutputItem_itemClicked"]
